Init: Swagger API routes
